bug-fix:images on the left side in the movie list being pushed to top on mobile screen sizes

--- a/src/movies/MoviesList/MoviesList.css
+++ b/src/movies/MoviesList/MoviesList.css
@@ -90,7 +90,7 @@
 
 @media (max-width: 350px) {
   .movie-list-grid {
-    column-gap: 2%;
+    column-gap: 2.5%;
     row-gap: 1%;
   }
 }
