--- a/src/movies/movieCard/MovieCard.css
+++ b/src/movies/movieCard/MovieCard.css
@@ -110,6 +110,6 @@
   }
 
   .movie-card-title {
-    font-size: 0.8rem;
+    font-size: 0.7rem;
   }
 }
